--- a/flask_app/Templates/states.html
+++ b/flask_app/Templates/states.html
@@ -27,7 +27,7 @@
                         <ul class="dropdown-menu">
                             <input type="text" placeholder="Search.." id="state_input" onkeyup="filterFunction('state_dropdown', 'state_input')">
                             {% for state in all_states %}
-                            <li><a class="dropdown-item" href="states/{{state}}">{{state}}</a></li>
+                            <li><a class="dropdown-item" href="../states/{{state}}">{{state}}</a></li>
                             {% endfor %}
                         </ul>
                     </div>
