--- a/flask_app/Templates/search.html
+++ b/flask_app/Templates/search.html
@@ -13,28 +13,40 @@
             <div class="my_header">
                 
             </div>
-            <div class="selection">
+            <div class="reps">
+                <div>
+                    <button class="btn btn-success btn-lg state-button">
+                        <a href="../" class="link-light">Home</a>
+                    </button>
+                </div>
+                <div></div>
+                <h1>Find your representatives </h1>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+
+            <div class="state-page-dropdowns">
                 <div class="dropdown my_dropdown">
-                    <p class="text-light">Select By State</p>
                     <button class="btn btn-success btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        States
+                        Select new state
                     </button>
                     <div id="state_dropdown">
 
                         <ul class="dropdown-menu">
                             <input type="text" placeholder="Search.." id="state_input" onkeyup="filterFunction('state_dropdown', 'state_input')">
                             {% for state in all_states %}
-                            <li><a class="dropdown-item" href="states/{{state}}">{{state}}</a></li>
+                            <li><a class="dropdown-item" href="../states/{{state}}">{{state}}</a></li>
                             {% endfor %}
                         </ul>
                     </div>
                 </div>
                 <div class="dropdown my_dropdown">
-                    <button class="btn btn-success btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Officials
+                    <button class="btn btn-success btn-lg dropdown-toggle state-button" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        {{state}} Officials
                     </button>
                     <div id="official_dropdown">
-
+                        
                         <ul class="dropdown-menu">
                             <input type="text" placeholder="Search.." id="official_input" onkeyup="filterFunction('official_dropdown', 'official_input')">
                             
