--- a/flask_app/Templates/search.html
+++ b/flask_app/Templates/search.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body class="bg-dark">
+<body class="">
 
     <div class="my_container">
             <div class="my_header">
@@ -25,39 +25,61 @@
                 <div></div>
                 <div></div>
             </div>
-
-            <div class="state-page-dropdowns">
-                <div class="dropdown my_dropdown">
-                    <button class="btn btn-success btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Select new state
-                    </button>
-                    <div id="state_dropdown">
-
-                        <ul class="dropdown-menu">
-                            <input type="text" placeholder="Search.." id="state_input" onkeyup="filterFunction('state_dropdown', 'state_input')">
-                            {% for state in all_states %}
-                            <li><a class="dropdown-item" href="../states/{{state}}">{{state}}</a></li>
-                            {% endfor %}
-                        </ul>
-                    </div>
+            <div class="front-page-box">
+                
+                <div class="text-success col-4">
+                    <h2>
+                        Welcome to [Your Website Name], an archive for tracking congress members' recent stances on Palestine. Stay informed about their positions and easily find their contact information to let them know how you feel.
+                    </h2>
+                    <h2>
+                        Search for your representatives by state or by name name directly.
+                    </h2>
                 </div>
-                <div class="dropdown my_dropdown">
-                    <button class="btn btn-success btn-lg dropdown-toggle state-button" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        {{state}} Officials
-                    </button>
-                    <div id="official_dropdown">
-                        
-                        <ul class="dropdown-menu">
-                            <input type="text" placeholder="Search.." id="official_input" onkeyup="filterFunction('official_dropdown', 'official_input')">
+                
+                <div class="state-page-dropdowns">
+                    <div class="dropdown my_dropdown">
+                        <button class="btn btn-success btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Select new state
+                        </button>
+                        <div id="state_dropdown">
                             
-                            {% for official in officials %}
-                            <li><a class="dropdown-item" href="officials/{{official.id}}">{{official.first_name}} {{official.last_name}}</a></li>
-                            {% endfor %}
-                        </ul>
+                            <ul class="dropdown-menu">
+                                <input type="text" placeholder="Search.." id="state_input" onkeyup="filterFunction('state_dropdown', 'state_input')">
+                                {% for state in all_states %}
+                                <li><a class="dropdown-item" href="../states/{{state}}">{{state}}</a></li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="dropdown my_dropdown">
+                        <button class="btn btn-success btn-lg dropdown-toggle state-button" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            {{state}} Officials
+                        </button>
+                        <div id="official_dropdown">
+                            
+                            <ul class="dropdown-menu">
+                                <input type="text" placeholder="Search.." id="official_input" onkeyup="filterFunction('official_dropdown', 'official_input')">
+                                
+                                {% for official in officials %}
+                                <li><a class="dropdown-item" href="officials/{{official.id}}">{{official.first_name}} {{official.last_name}}</a></li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="my_footnotes">
+                
+                <!-- <span>
+                    This website is designed as an archive to highlight recent congress member's stance on palenstine.
+                </span></br>
+                <span>
+                        Currently, post are focused to 2023 and twitter. Though, we hope to expand to other social media platforms.
+                    </span></br>
+                    <span>
+                        See if your representative have spoken out against geneocide or have remained silent.
+                    </span> -->
+                </p>
+                <div class="my_footnotes">
 
             </div>
         </div>
