--- a/flask_app/Templates/search.html
+++ b/flask_app/Templates/search.html
@@ -13,23 +13,21 @@
             <div class="my_header">
                 
             </div>
-            <div class="reps">
+            <div class="reps home">
+<!-- 
                 <div>
                     <button class="btn btn-success btn-lg state-button">
                         <a href="../" class="link-light">Home</a>
                     </button>
-                </div>
-                <div></div>
+                </div> -->
                 <h1>Find your representatives </h1>
-                <div></div>
-                <div></div>
-                <div></div>
+
             </div>
             <div class="front-page-box">
                 
-                <div class="text-success col-4">
+                <div class="text-success mt-5">
                     <h2>
-                        Welcome to [Your Website Name], an archive for tracking congress members' recent stances on Palestine. Stay informed about their positions and easily find their contact information to let them know how you feel.
+                        Welcome to Congress on Palestine, an archive for tracking congress members' recent stances on Palestine. Stay informed about their positions and easily find their contact information to let them know how you feel.
                     </h2>
                     <h2>
                         Search for your representatives by state or by name name directly.
@@ -52,7 +50,7 @@
                         </div>
                     </div>
                     <div class="dropdown my_dropdown">
-                        <button class="btn btn-success btn-lg dropdown-toggle state-button" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button class="btn btn-success btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                             {{state}} Officials
                         </button>
                         <div id="official_dropdown">
