--- a/flask_app/Static/style.css
+++ b/flask_app/Static/style.css
@@ -250,6 +250,17 @@ html {
 #phone_left_div {
     display: none;
 }
+.social-media-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 10px;
+    width: 20%;
+    padding: 0;
+    margin: 0;
+}
+
 @media only screen and (max-width: 450px)  {
     .state-page-dropdowns {
         width: 100%;
@@ -345,6 +356,9 @@ html {
         background-color: white;
     }
 
+    .tweet_img {
+        display: none;
+    }
     .card_item {
         max-width: 40rem;
         position: relative;
